k8s/platform/seaweedfs/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seaweedfs
  labels:
    name: seaweedfs
    app.kubernetes.io/name: seaweedfs
    app.kubernetes.io/component: storage
